# sensor.community-api

./: README.md  generator_config.yaml  index.html  openapi.yaml  openapi_en.yaml
python-client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
python-client/.openapi-generator/: FILES
python-client/deutschland/sensorcommunity/: __init__.py  api_client.py  configuration.py  model_utils.py  rest.py
python-client/deutschland/sensorcommunity/api/: __init__.py  v1_api.py  v2_api.py
python-client/docs/: V1Api.md  V2Api.md
python-client/docs/models/: Result.md
python-client/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
python-client/openapi_client/api/: __init__.py  v1_api.py  v2_api.py
python-client/openapi_client/apis/: __init__.py
python-client/openapi_client/models/: __init__.py
python-client/sphinx-docs/: conf.py  index.rst
python-client/sphinx-docs/source/: modules.rst  sensorcommunity.api.rst  sensorcommunity.apis.rst  sensorcommunity.model.rst  sensorcommunity.models.rst  sensorcommunity.rst
python-client/test/: api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py  schemas.py  test_v1_api.py  test_v2_api.py
python-client/test/api/: __init__.py  v1_api.py  v2_api.py
python-client/test/apis/: __init__.py  path_to_api.py  tag_to_api.py
python-client/test/model/: __init__.py  result.pyi
python-client/test/models/: __init__.py
python-client/test/paths/: __init__.py
python-client/test/test_models/: test_result.py
(+65 files in other folders)
